[project]
name = "smassh"
version = "3.1.8"
description = "A TUI based typing application"
readme = "README.md"
license = { text = "GPL v3" }
authors = [{ name = "kraanzu", email = "kraanzu@gmail.com" }]
maintainers = [{ name = "kraanzu", email = "kraanzu@gmail.com" }]
requires-python = ">=3.9"
dependencies = [
    "textual>=3.2.0",
    "click>=8.1.7",
    "requests>=2.31.0",
    "platformdirs>=4.3.6",
]

[project.urls]
Homepage = "https://github.com/kraanzu/smassh"
Repository = "https://github.com/kraanzu/smassh"

[project.scripts]
smassh = "smassh.__main__:main"

[dependency-groups]
dev = [
    "pre-commit>=2.17.0",
    "textual-dev>=1.6.1",
    "ruff>=0.6.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smassh"]

[tool.ruff]
exclude = ["venv"]
lint.ignore = ["F405"]
